# procman

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.html  CHANGELOG.rst  README.html  README.rst  REUSE.toml  genindex.html  index.html  mypy.ini  objects.inv  procman-sdist-sbom.txt  py-modindex.html  pyproject.toml  readme_include.html  requirements.txt  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: bandit.yml  ci.yml  coverage.yml  pylint.yml  release.yml  sphinx.yml  wheels.yml
_modules/: index.html
_modules/procman/: procman.html  utils.html
_sources/: CHANGELOG.rst.txt  README.rst.txt  index.rst.txt
_sources/api/: modules.rst.txt  procman.procman.rst.txt  procman.rst.txt  procman.utils.rst.txt
_static/: documentation_options.js
api/: modules.html  procman.html  procman.procman.html  procman.utils.html
dev/: generate-changelog.html  pre-commit-config.html  pre-commit-usage.html
docs/: make.bat
docs/source/: conf.py  index.rst
procman/: __init__.py  procman.py  utils.py
procman/examples/: app.py  run_redis.sh
tests/: conftest.py  test_misc.py  test_procman.py
tests/testdata/: procman_tdata2.yml
