[metadata]
name = procman
description = Console tool for running multiple external processes and multiplexing their output
url = https://github.com/sarnold/procman
author = Stephen Arnold
author_email = nerdboy@gentoo.org
long_description = file: README.rst
long_description_content_type = text/x-rst
license_expression = LGPL-2.1-or-later
license_files = COPYING
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Environment :: Console
    Topic :: Software Development
    Topic :: Software Development :: Testing

[options]
python_requires = >= 3.8

setup_requires =
    setuptools_scm[toml]

install_requires =
    honcho
    importlib_resources; python_version < '3.10'
    munch
    ruamel.yaml>=0.16.6

packages =
    procman
    procman.examples

[options.package_data]
procman.examples =
    *.py
    *.sh

[options.entry_points]
console_scripts =
    procman = procman.procman:main

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    sphinx_git
    sphinx_rtd_theme<3.0
    sphinxcontrib-apidoc
    myst-parser
test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
examples =
    flask
    redis
all =
    %(cov)s
    %(doc)s
    %(test)s
    %(examples)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 90
